--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ Tags: fixed-width,white,light,two-columns,right-sidebar,theme-options,threaded-c
 -------------------------------------------------------------- */
 body { font-family: Arial, Helvetica, sans-serif;background:url('images/canvas.png') repeat fixed; color: #fff; font-size: 14px }
 a:link, a:visited { color: #eaf0f7 }
-a:hover { color: #eaf0f7 }
+a:hover { color: #FFB800 }
 
 .clear { clear: both; display: block; overflow: hidden; visibility: hidden; width: 0; height: 0 }
 .clearfix:after { clear:both; content:'.'; display: block; visibility: hidden; height: 0 }
@@ -45,7 +45,7 @@ a:hover { color: #eaf0f7 }
 * html .clearfix{ height: 1% }
 .hfeed{ display: inline }
 
-h3 { font-size: 18px; font-weight: bold; margin: 2em 0 1.25em; color: #666; text-transform: uppercase }
+h3 { font-size: 18px; font-weight: bold; margin: ,5em 0 1.25em; color: #666; text-transform: uppercase }
 h1, h2, h4 { font-weight: bold }
 h5 { font-size: 16px; margin: 1em 0 0.5em; color: #999; text-transform: uppercase }
 h6 { font-size: 14px }
@@ -65,9 +65,12 @@ img.aligncenter, img.alignright, img.alignleft { border: 5px solid #DDD }
 .wp-caption .wp-caption-text { font-size: 11px; line-height: 17px; padding: 0 4px 5px; margin: 0 }
 
 .submit { background: #FFF; border: 1px solid #DDD; color: #6385A1; padding: 5px }
-.submit:hover { background: #D6156C; color: #FFF }
+.submit:hover { background: #FFB800; color: #FFF }
 .navigation a:link, .navigation a:visited, .comments-navigation a:link, .comments-navigation a:visited { border: 1px solid #DDD; display: inline-block; text-decoration: none; padding: 5px; font-weight: bold; font-size: 14px }
-
+.navigation a:hover {
+color:#fff;
+background:#FFB800;
+}
 
 /* =Layouts
 -------------------------------------------------------------- */
@@ -83,7 +86,7 @@ img.aligncenter, img.alignright, img.alignleft { border: 5px solid #DDD }
 .logo { float: left }
 .blog-name { display: block; font-size: 44px; letter-spacing: -2px; font-weight: bold; margin: 0; padding: 0; line-height: 1em }
 .blog-name a:link, .blog-name a:visited { text-decoration: none; color: #2B2825 }
-.blog-name a:hover { color: #D6156C }
+.blog-name a:hover { color: #FFB800 }
 .blog-description { font-size: 16px; font-weight: bold; color: #CCC; margin: 0; padding: 0 }
 #searchbar { display: block; float: right; margin: 1em 0 0 }
 #searchbar .text { width: 270px; float: left }
@@ -134,6 +137,9 @@ img.aligncenter, img.alignright, img.alignleft { border: 5px solid #DDD }
 margin-bottom: 3em;
 width:222px;
 }
+.single .post {
+width:inherit;
+}
 .post img:hover {
 -moz-box-shadow: 0px 0px 5px #ffffff;
 box-shadow: 0px 0px 5px #ffffff;
@@ -141,10 +147,11 @@ box-shadow: 0px 0px 5px #ffffff;
 .post h5 a {
 color:#eaf0f7;
 font-size:20px;
+padding:16px 16px 0 0;
 }
 .entry-title { font-size: 28px; margin: 0 0 0.5em; letter-spacing: -1px; font-weight: bold }
 .entry-title a:link, .entry-title a:visited { text-decoration: none; color: #eaf0f7 }
-.entry-title a:hover { color: #D6156C }
+.entry-title a:hover { color: #FFB800 }
 .entry-content p, .entry-summary { line-height: 1.73em }
 .entry-content { font-size: 14px }
 .more-link { display: inline-block; overflow: hidden; font-weight: bold; font-size: 14px; margin: 1em 0; zoom: 1 }
