--- a/style.css
+++ b/style.css
@@ -47,7 +47,17 @@ a:hover { color: #FFB800 }
 
 h3 { font-size: 18px; font-weight: bold; margin: ,5em 0 1.25em; color: #666; text-transform: uppercase }
 h1, h2, h4 { font-weight: bold }
-h5 { font-size: 16px; margin: 1em 0 0.5em; color: #999; text-transform: uppercase }
+h5 { font-size: 31px; margin: 1.25em 0 0.75em; color: #999; 
+  font-family: 'Wire One', serif;
+  font-style: normal;
+  font-weight: 700;
+  text-shadow: none;
+  text-decoration: none;
+  text-transform: capitalize;
+  letter-spacing: 0.055em;
+  word-spacing: 0.073em;
+  line-height: .29;
+}
 h6 { font-size: 14px }
 code { font-family: "Consolas", "Lucida Console", "Courier New", Courier, monospace; font-size: 14px }
 
@@ -84,8 +94,21 @@ background:#FFB800;
 #header { }
 #branding { border-bottom: 1px solid #DDD; padding: 25px 0 }
 .logo { float: left }
-.blog-name { display: block; font-size: 44px; letter-spacing: -2px; font-weight: bold; margin: 0; padding: 0; line-height: 1em }
-.blog-name a:link, .blog-name a:visited { text-decoration: none; color: #2B2825 }
+.blog-name { 
+  
+  font-family: 'Wire One', serif;
+  font-size: 58px;
+  font-style: normal;
+  font-weight: 700;
+  text-shadow: none;
+  text-decoration: none;
+  text-transform: capitalize;
+  letter-spacing: 0.055em;
+  word-spacing: 0.073em;
+  line-height: .29;
+  padding:15px 0 5px 0;
+}
+.blog-name a:link, .blog-name a:visited { text-decoration: none;font-color:#eee; }
 .blog-name a:hover { color: #FFB800 }
 .blog-description { font-size: 16px; font-weight: bold; color: #CCC; margin: 0; padding: 0 }
 #searchbar { display: block; float: right; margin: 1em 0 0 }
@@ -146,10 +169,19 @@ box-shadow: 0px 0px 5px #ffffff;
 }
 .post h5 a {
 color:#eaf0f7;
-font-size:20px;
-padding:16px 16px 0 0;
+font-family: 'Wire One', serif;
+  font-size: 38px;
+  font-style: normal;
+  font-weight: 700;
+  text-shadow: none;
+  text-decoration: none;
+  text-transform: capitalize;
+  letter-spacing: 0.055em;
+  word-spacing: -0.073em;
+  line-height: 1.29;
+  padding:16px 16px 0 0;
 }
-.entry-title { font-size: 28px; margin: 0 0 0.5em; letter-spacing: -1px; font-weight: bold }
+.entry-title { font-size: 48px; margin: 0 0 0.5em; letter-spacing: 2px; font-weight: bold; font-family: 'Maiden Orange', arial, serif; }
 .entry-title a:link, .entry-title a:visited { text-decoration: none; color: #eaf0f7 }
 .entry-title a:hover { color: #FFB800 }
 .entry-content p, .entry-summary { line-height: 1.73em }
