--- a/style.css
+++ b/style.css
@@ -159,6 +159,7 @@ background:#FFB800;
 .post { 
 margin-bottom: 3em;
 width:222px;
+padding:10px 0;
 }
 .single .post {
 width:inherit;
@@ -170,7 +171,7 @@ box-shadow: 0px 0px 5px #ffffff;
 .post h5 a {
 color:#eaf0f7;
 font-family: 'Wire One', serif;
-  font-size: 38px;
+  font-size: 32px;
   font-style: normal;
   font-weight: 700;
   text-shadow: none;
@@ -178,8 +179,8 @@ font-family: 'Wire One', serif;
   text-transform: capitalize;
   letter-spacing: 0.055em;
   word-spacing: -0.073em;
-  line-height: 1.29;
-  padding:16px 16px 0 0;
+  line-height: 1;
+  padding:16px 16px 0 5px;
 }
 .entry-title { font-size: 48px; margin: 0 0 0.5em; letter-spacing: 2px; font-weight: bold; font-family: 'Maiden Orange', arial, serif; }
 .entry-title a:link, .entry-title a:visited { text-decoration: none; color: #eaf0f7 }
