--- a/style.css
+++ b/style.css
@@ -244,3 +244,45 @@ font-family: 'Wire One', serif;
 #footer-sidebar .widgetcontainer { float: left; margin-right: 0.5em; min-width: 200px; overflow: hidden }
 #footer-sidebar .widgetcontainer li { margin: 0.3em 0 }
 .footer-message { margin: 1em 0; font-size: 14px; color: #666 }
+
+/* Menus and sub-menus
+-------------------------------------------------------------- */
+.nav {
+position:relative;
+padding:5px -5px 3px 10px;
+list-style:none;
+height:30px;
+background:rgba(250,250,250,.5);
+       filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#FAFAFA60,endColorstr=#FAFAFA60);
+
+-webkit-box-shadow: inset 1px 1px 30px #2b313a;
+-moz-box-shadow: inset 1px 1px 30px #2b313a;
+box-shadow: inset 1px 1px 30px #2b313a;
+}
+.nav li {
+padding: 0 0 0 10px;
+}
+.sub-menu {
+margin:0;
+padding:3px 5px 12px 5px;
+list-style:none;
+position:absolute;
+height:20px;
+z-index:100;
+background:rgba(250,250,250,.5);
+-webkit-box-shadow: inset 1px 1px 30px #2b313a;
+-moz-box-shadow: inset 1px 1px 30px #2b313a;
+box-shadow: inset 1px 1px 30px #2b313a;
+/*-webkit-border-top-left-radius: 0px;
+-webkit-border-top-right-radius: 7px;
+-webkit-border-bottom-right-radius: 7px;
+-webkit-border-bottom-left-radius: 0px;
+-moz-border-radius-topleft: 0px;
+-moz-border-radius-topright: 7px;
+-moz-border-radius-bottomright: 7px;
+-moz-border-radius-bottomleft: 0px;
+border-top-left-radius: 0px;
+border-top-right-radius: 7px;
+border-bottom-right-radius: 7px;
+border-bottom-left-radius: 0px;*/
+}
