--- a/style.css
+++ b/style.css
@@ -247,6 +247,7 @@ font-family: 'Wire One', serif;
 
 /* Menus and sub-menus
 -------------------------------------------------------------- */
+
 .nav {
 position:relative;
 padding:5px -5px 3px 10px;
@@ -285,4 +286,14 @@ border-top-left-radius: 0px;
 border-top-right-radius: 7px;
 border-bottom-right-radius: 7px;
 border-bottom-left-radius: 0px;*/
+}
+
+.native-grid {
+padding:10px;
+display:inline-block;
+width:200px;
+}
+.more-link {
+text-align:center;
+margin:10px 18%;
 }
