--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ font-family: 'Wire One', serif;
   line-height: 1;
   padding:16px 16px 0 5px;
 }
-.entry-title { font-size: 48px; margin: 0 0 0.5em; letter-spacing: 2px; font-weight: bold; font-family: 'Maiden Orange', arial, serif; }
+.entry-title { font-size: 48px; margin: 0 0 0.5em; letter-spacing: 2px; font-weight: bold; }
 .entry-title a:link, .entry-title a:visited { text-decoration: none; color: #eaf0f7 }
 .entry-title a:hover { color: #FFB800 }
 .entry-content p, .entry-summary { line-height: 1.73em }
@@ -296,4 +296,42 @@ width:200px;
 .more-link {
 text-align:center;
 margin:10px 18%;
+}
+
+.page-content {
+padding:20px 30px 10px 40px;
+width:475px;
+height: 155px;
+overflow:auto;
+}
+
+.page-content::-webkit-scrollbar{
+    width: 7px;
+    height: 7px;
+}
+
+.page-content::-webkit-scrollbar-button:start:decrement,
+.page-content::-webkit-scrollbar-button:end:increment {
+    display: block;
+    height: 10px;
+}
+
+.page-content::-webkit-scrollbar-button:vertical:increment {
+    background-color: #fff;
+    background: transparent;
+}
+
+.page-content::-webkit-scrollbar-track {
+    -webkit-border-radius: 3px;
+}
+
+.page-content::-webkit-scrollbar-track-piece {
+    -webkit-border-radius: 3px;
+}
+
+.page-content::-webkit-scrollbar-thumb:vertical {
+    height: 50px;
+    background-color: rgba(250,250,250,.5);
+    -webkit-border-radius: 3px;
+    position: relative;
 }
