added footer menu

--- a/style.css
+++ b/style.css
@@ -335,3 +335,26 @@ overflow:auto;
     -webkit-border-radius: 3px;
     position: relative;
 }
+
+.menu-logged-in-user-container .menu {
+border:0;
+display:inline-block;
+}
+.menu-logged-in-user-container {
+width:100%;
+margin:0 auto;
+text-align:center;
+}
+.menu-logged-in-user-container ul li {
+display:inline;    
+margin:10px;
+}
+.menu-logged-in-user-container ul li a {
+text-decoration:none;
+padding:10px;
+margin-left:20px;
+color:#999;
+}
+.menu-logged-in-user-container ul li a:hover {
+color:#FFB800;
+}
