--- a/style.css
+++ b/style.css
@@ -336,25 +336,25 @@ overflow:auto;
     position: relative;
 }
 
-#footer .menu {
+#footer-menu {
 border:0;
 display:inline-block;
 }
-#footer .menu {
+#footer-menu {
 width:100%;
 margin:0 auto;
 text-align:center;
 }
-#footer .menu ul li {
+#footer-menu ul li {
 display:inline;    
 margin:10px;
 }
-#footer .menu ul li a {
+#footer-menu ul li a {
 text-decoration:none;
 padding:10px;
 margin-left:20px;
 color:#999;
 }
-#footer .menu ul li a:hover {
+#footer-menu ul li a:hover {
 color:#FFB800;
 }
